--- a/web/style.css
+++ b/web/style.css
@@ -1,17 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap");
-
-:root {
-  --color-default: #cfd2da;
-  --color-hover: white;
-}
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,500&display=swap');
 
 body {
   visibility: hidden;
   user-select: none;
   white-space: nowrap;
   margin: 0;
-  user-select: none;
   overflow: hidden;
+  font-family: "Barlow Condensed", sans-serif;
 }
 
 p {
@@ -19,7 +14,7 @@ p {
 }
 
 .material-symbols-outlined {
-  font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 40;
+  font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 40;
 }
 
 #eye {
@@ -27,65 +22,258 @@ p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 22pt;
-  fill: black;
-}
-
-.eye-hover {
-  fill: var(--color-default);
-}
-
-#options-wrapper {
-  position: absolute;
-  top: calc(48.4%);
-  left: calc(50% + 18pt);
+  font-size: 2pt;
 }
 
 .option-container {
-  color: var(--color-default);
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  font-family: "Nunito";
-  background: linear-gradient(
-    90deg,
-    rgba(20, 20, 20, 0.7) 0%,
-    rgba(20, 20, 20, 0.6) 66%,
-    rgba(47, 48, 53, 0) 100%
-  );
-  font-size: 11pt;
-  line-height: 22pt;
-  vertical-align: middle;
-  margin: 2pt;
-  transition: 300ms;
-  transform-origin: left top;
-  scale: 1;
-  height: 22pt;
-  width: 150pt;
-  top: 0;
+  color: white;
+  letter-spacing: 0.5px;
+  display: block;
+  height: 39px;
+  font-size: 2.8rem;
+  margin-left: -22px;
+  margin-top: -17px;
+  cursor: pointer;
+  position: absolute;
+  text-align: center;
+  width: 39px;
+  transition: all 0.7s;
+  animation: fadeIn 0.3s forwards;
 }
 
-.option-container:hover {
-  background: linear-gradient(
-    90deg,
-    rgba(30, 30, 30, 0.7) 0%,
-    rgba(30, 30, 30, 0.6) 66%,
-    rgba(57, 58, 63, 0) 100%
-  );
-  transform-origin: left top;
-  color: var(--color-hover);
-  margin-left: 4pt;
+.option-icon:hover {
+  color: white;
+  transform: scale(1.1);
+  filter: drop-shadow(0px 0px 35px 15px rgb(0, 255, 179));
+}
+
+#eyeSvg {
+  color: white;
+  font-size: 0.8rem;
+  transition: transform 0.3s;
 }
 
 .option-icon {
-  font-size: 12pt;
+  filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 1));
+  font-size: 3rem;
   line-height: 22pt;
-  width: 14pt;
-  margin: 5pt;
-  color: var(--color-default);
+  transform-origin: center;
+  transition: all 0.7s;
 }
 
 .option-label {
-  font-weight: 500;
+  font-weight: 300;
 }
+
+.target-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  height: 100vh;
+}
+
+.circle, .ring {
+  height: 512px;
+  position: relative;
+  width: 512px;
+}
+
+.circle {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  margin: 0 auto;
+}
+
+.ring {
+  border-radius: 50%;
+  opacity: 1;
+  transition: all 0.4s ease-out;
+  animation: fadeIn 0.6s forwards;
+}
+
+.open .ring {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.open {
+  animation: fadeIn 0.4s ease-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0.7;
+    transform: scale(0.5);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.center {
+  border-radius: 50%;
+  bottom: 0;
+  color: white;
+  height: 80px;
+  left: 0;
+  line-height: 0px;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 230px;
+  transition: all 0.4s ease-out;
+}
+
+.open .center {
+  border-color: #aaaaaa;
+}
+
+a {
+  font-size: 17px;
+  text-decoration: none;
+  transition: all 0.3s;
+  outline: 0;
+}
+
+
+.menu-item {
+  display: block;
+  font-size: 3rem;
+  height: 39px;
+  font-size: 2.8rem;
+  margin-left: -22px;
+  margin-top: -17px;
+  cursor: pointer;
+  position: absolute;
+  text-align: center;
+  width: 39px;
+  background-size: 100%;
+  background-position: center;
+  opacity: 0; 
+  animation: fadeIn 0.2s ease-out forwards;
+}
+
+
+
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: skew(15deg) translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: skew(0deg) translateY(0px);
+  }
+}
+
+
+
+.menu-item:nth-child(1) {
+  animation-delay: 0.1s;
+}
+.menu-item:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.menu-item:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.menu-item:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.menu-item:nth-child(5) {
+  animation-delay: 0.5s;
+}
+.menu-item:nth-child(6) {
+  animation-delay: 0.6s;
+}
+.menu-item:nth-child(7) {
+  animation-delay: 0.7s;
+}
+.menu-item:nth-child(8) {
+  animation-delay: 0.8s;
+}
+.menu-item:nth-child(9) {
+  animation-delay: 0.9s;
+}
+.menu-item:nth-child(10) {
+  animation-delay: 1s;
+}
+
+
+.menu-item:hover {
+  transform: scale(1.4);
+}
+
+.hidden {
+  display: none;
+}
+
+.target-eye {
+  position: absolute;
+  display: none;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  height: 6px;
+  width: 6px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 1);
+  font-size: 3vh;
+  animation: pulse 0.4s infinite alternate;
+}
+
+@keyframes pulse {
+  from {
+    transform: scale(1.2);
+    opacity: 0.7;
+  }
+  to {
+    transform: scale(1.0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translate(-50px);
+  }
+  to {
+    transform: translate(0);
+    opacity: 1;
+  }
+}
+
+.center {
+  color: white;
+  position: absolute;
+  left: 50%;
+  opacity: 0;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 1);
+  transition: opacity 0.6s;
+  font-size:1.3rem;
+  margin-right:1.5rem;
+
+  z-index:10;
+  top: 20%;
+ 
+  transform: translate(-50%, -20%);
+}
+
+.target-label {
+  list-style: none;
+  font-size: 1.6vh;
+  font-family: "Barlow Condensed", sans-serif;
+  color: #ffffff;
+  text-transform: uppercase;
+  user-select: none;
+  white-space: nowrap;
+}
+
